# dj-core

./: .pyup.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  requirements-defaults.txt  requirements-production.txt  setup.cfg  setup.py
dj_core/: __init__.py  apps.py  celery.py  config.py  settings.py  skeleton_data.py  storage.py  urls.py  utils.py  wsgi.py
dj_core/management/commands/: setup_skeletons.py
src/dj_core/: __init__.py  celery.py  config.py  settings.py  skeleton_data.py  storage.py  urls.py  utils.py
src/dj_core/management/commands/: setup_skeletons.py
