[metadata]
name = dj_core
version = attr: dj_core.VERSION
description = A self-contained and extensible Django environment
author = Ionata Digital
author_email = webmaster@ionata.com.au
url = https://github.com/ionata/dj-core
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = find:
python_requires = >=3.5
include_package_data = True
install_requires =
    django>=1.11.0
    django-environ>=0.4.0

[options.extras_require]
defaults =
    boto3>=1.5.0
    celery[redis]>=4.1.0
    django-anymail[mailgun]>=2.0
    django-cors-headers>=2.2.0
    django-debug-toolbar>=1.9.1
    django-extensions>=2.0.6
    django-minimal-user>=0.0.2
    django-storages>=1.6.6
    psycopg2>=2.0.0

[bdist_wheel]
universal = 1
